<resources>
    <string name="app_name">EngineerMode</string>
    <string name="Send">Send</string>
    <string name="Send_spc">Send Spc</string>
    <string name="pref_ecc_num">Emergency Numbers</string>
    <string name="pref_ecc_num_key">emergency_num_key</string>
    <string name="pref_ecc_num_ok">OK</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardware_testing">Hardware Testing</string>
    <string name="tab_location">Location</string>
    <string name="tab_log_and_debugging">Log and Debugging</string>
    <string name="tab_others">Others</string>
    <string name="simme_lock">Simme Lock</string>
    <string name="cfu">CFU</string>
    <string name="bip">BIP</string>
    <string name="bandmode">BandMode</string>
    <string name="network_info">NetworkInfo</string>
    <string name="cdma_network_info">CDMA NetworkInfo</string>
    <string name="modem_test">Modem Test</string>
    <string name="rf_desense_test">RF De-sense Test</string>
    <string name="fast_dormancy">Fast Dormancy</string>
    <string name="nfc_6605">NFC(6605)</string>
    <string name="nfc_st">NFC(STMicro)</string>
    <string name="nfc">NFC</string>
    <string name="fm_receiver">FM Receiver</string>
    <string name="fm_transmitter">FM Transmitter</string>
    <string name="io">IO</string>
    <string name="touchscreen">TouchScreen</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="de_sense">De-Sense</string>
    <string name="usb">USB</string>
    <string name="power">Power</string>
    <string name="location_basedservice">Location Based Service</string>
    <string name="fused_location_provider">Fused Location Provider</string>
    <string name="auto_dialer">Auto Dialer</string>
    <string name="mtk_logger">MTKLogger</string>
    <string name="debug_utils">Debug Utils</string>
    <string name="swla">SWLA</string>
    <string name="cds_information">CDS Information</string>
    <string name="non_sleep_mode">Non-sleep mode</string>
    <string name="non_sleep_disable">Disable Non-sleep mode</string>
    <string name="non_sleep_enable">Enable Non-sleep mode</string>
    <string name="pch_data_prefer_title">Mobile data service preferred</string>
    <string name="pch_data_prefer_summary">Allow mobile data transmission at full speed</string>
    <string name="pch_data_prefer_message">"Mobile data service preferred is used to improve the data transmission efficiency at the cost of lower call receiving rate. Not recommended to do so.

Are you sure to allow mobile data service preferred?"</string>
    <string name="BatteryLog">BatteryLog</string>
    <string name="log_record_interval">Interval of info record [1-100]:</string>
    <string name="battery_info_record">Battery Info Record:</string>
    <string name="battery_info_record_start">Start</string>
    <string name="battery_info_record_stop">Stop</string>
    <string name="log_record_interval_default">10</string>
    <string name="log_record_interval_unit">s</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_stop">Stop</string>
    <string name="battery_restart">Restart</string>
    <string name="battery_current">Current</string>
    <string name="battery_rise">Rise</string>
    <string name="battery_reduce">Reduce</string>
    <string name="battery_set">Set</string>
    <string name="battery_stop_record_warning">Please stop recording battery info first!</string>
    <string name="battery_status">Battery status:</string>
    <string name="battery_scale">Battery scale:</string>
    <string name="battery_level">Battery level:</string>
    <string name="battery_health">Battery health:</string>
    <string name="battery_technology">Battery technology:</string>
    <string name="battery_voltage">Battery voltage:</string>
    <string name="battery_voltage_units">mV</string>
    <string name="battery_temperature">Battery temperature:</string>
    <string name="battery_temperature_units">° C</string>
    <string name="battery_bootup_time">Time since bootup:</string>
    <string name="battery_status_unknown">Unknown</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_charging_ac">(AC)</string>
    <string name="battery_status_charging_usb">(USB)</string>
    <string name="battery_status_charging_wireless">(WIRELESS)</string>
    <string name="battery_status_charging_unknown">(UNKNOWN)</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_not_charging">Not charging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_health_unknown">Unknown</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_over_voltage">Over voltage</string>
    <string name="battery_health_unspecified_failure">Unknown error</string>
    <string name="battery_health_cold">Cold</string>
    <string name="GPRS">GPRS</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="IMEI">Write IMEI</string>
    <string name="DefSIMText">Default SIM Setting</string>
    <string name="default_sim1">Default SIM1</string>
    <string name="default_sim2">Default SIM2</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_ALWAYS_ATTACH">Always Attach</string>
    <string name="GPRS_WHEN_NEEDED">When Needed</string>
    <string name="GPRS_ALWAYS_ATTACH_CONTINUE">Always Attach Continue</string>
    <string name="GPRS_WHEN_NEEDED_CONTINUE">When Needed Continue</string>
    <string name="GPRS_CANCEL_SPECIFY">Not to Specify</string>
    <string name="GPRS_pdn_reuse_on">PDN reuse on</string>
    <string name="GPRS_pdn_reuse_off">PDN reuse off</string>
    <string name="TouchScreen">TouchScreen</string>
    <string name="TouchScreen_HandWriting">HandWriting</string>
    <string name="TouchScreen_RateReport">RateReport</string>
    <string name="TouchScreen_Verification">Verification</string>
    <string name="TouchScreen_VerificationPoint">PointVerification</string>
    <string name="TouchScreen_VerificationLine">LineVerification</string>
    <string name="TouchScreen_VerificationShaking">ShakingVerification</string>
    <string name="TouchScreen_MultiTouch">MultiTouch</string>
    <string name="TouchScreen_Settings_TextValue">The value</string>
    <string name="TouchScreen_Settings_TextSpinner">Category</string>
    <string name="TouchScreen_Settings_TextSet">Set</string>
    <string name="TouchScreen_Settings">Settings</string>
    <string name="TouchScreen_Settings_Value">0</string>
    <string name="memory">Memory</string>
    <string name="memory_item_emi">EMI Registers</string>
    <string name="memory_title_flash">Flash</string>
    <string name="memory_title_emi">EMI Register</string>
    <string name="memory_select_error">Select item error</string>
    <string name="memory_file_sys_info">File System Info</string>
    <string name="memory_partition_info">Partition Info</string>
    <string name="memory_getinfo_error">Can not get flash info</string>
    <string name="memory_dialog_title">Error</string>
    <string name="memory_dialog_message">Not implementation</string>
    <string name="memory_dialog_ok">OK</string>
    <string name="NetworkInfo_Cell">RR Cell Sel</string>
    <string name="NetworkInfo_Ch">RR Ch Dscr</string>
    <string name="NetworkInfo_Ctrl">RR Ctrl chan</string>
    <string name="NetworkInfo_RACH">RR RACH Ctrl</string>
    <string name="NetworkInfo_LAI">RR LAI Info</string>
    <string name="NetworkInfo_Radio">RR Radio Link</string>
    <string name="NetworkInfo_Meas">RR Meas Rep</string>
    <string name="NetworkInfo_Ca">RR Ca List</string>
    <string name="NetworkInfo_Control">RR Control Msg</string>
    <string name="NetworkInfo_SI2Q">RR SI2Q Info</string>
    <string name="NetworkInfo_MI">RR MI Info</string>
    <string name="NetworkInfo_BLK">RR BLK Info</string>
    <string name="NetworkInfo_TBF">RR TBF Info</string>
    <string name="NetworkInfo_GPRS">RR GPRS Gen</string>
    <string name="NetworkInfo_3GGeneralStatus">3GGeneralStatusInd</string>
    <string name="NetworkInfo_3GSmEmInfo">SmEmInfo</string>
    <string name="NetworkInfo_3GMmEmInfo">3GMmEmInfo</string>
    <string name="NetworkInfo_3GGmmEmInfo">GmmEmInfo</string>
    <string name="NetworkInfo_3GTcmMmiEmInfo">3GTcmMmiEmInfo</string>
    <string name="NetworkInfo_3GCsceEMServCellSStatusInd">3GCsceEMServCellSStatusInd</string>
    <string name="NetworkInfo_3GCsceEmInfoMultiPlmn">3GCsceEmInfoMultiPlmn</string>
    <string name="NetworkInfo_3GMemeEmInfoUmtsCellStatus">3GMemeEmInfoUmtsCellStatus</string>
    <string name="NetworkInfo_3GMemeEmPeriodicBlerReportInd">3GMemeEmPeriodicBlerReportInd</string>
    <string name="NetworkInfo_3GUrrUmtsSrncId">3GUrrUmtsSrncId</string>
    <string name="NetworkInfo_3GSlceEmPsDataRateStatusInd">3GSlceEmPsDataRateStatusInd</string>
    <string name="NetworkInfo_3GMemeEmInfoHServCellInd">3GMemeEmInfoHServCellInd</string>
    <string name="NetworkInfo_3GHandoverSequenceIndStuct">3GHandoverSequenceIndStuct</string>
    <string name="NetworkInfo_3GUl2EmAdmPoolStatusIndStruct">3GUl2EmAdmPoolStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmPsDataRateStatusIndStruct">3GUl2EmPsDataRateStatusIndStruct</string>
    <string name="NetworkInfo_3Gul2EmHsdschReconfigStatusIndStruct">3GUl2EmHsdschReconfigStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmUrlcEventStatusIndStruct">3GUl2EmUrlcEventStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmPeriodicBlerReportInd">3GUl2EmPeriodicBlerReportInd</string>
    <string name="NetworkInfo_xGCsceEMNeighCellSStatusInd">XGCsceEMNeighCellSStatusInd</string>
    <string name="NetworkInfo_1xRTT_Radio">1xRTT Radio</string>
    <string name="NetworkInfo_1xRTT_Info">1xRTT Info</string>
    <string name="NetworkInfo_1xRTT_SCH_Info">1xRTT SCHInfo</string>
    <string name="NetworkInfo_1xRTT_Statistics">1xRTT Statistics</string>
    <string name="NetworkInfo_1xRTT_Serving">1xRTT Serving/Neighbor</string>
    <string name="NetworkInfo_EVDO_Serving_Info">EVDO Serving_Info</string>
    <string name="NetworkInfo_EVDO_Active_Set">EVDO Active Set</string>
    <string name="NetworkInfo_EVDO_Candidate_Set">EVDO Candidate Set</string>
    <string name="NetworkInfo_EVDO_Neighbor_Set">EVDO Neighbor Set</string>
    <string name="NetworkInfo_EVDO_FL">EVDO FL</string>
    <string name="NetworkInfo_EVDO_RL">EVDO RL</string>
    <string name="NetworkInfo_EVDO_State">EVDO State</string>
    <string name="NetworkInfo_EVDO_Force_Tx_Ant">CDMA Force TX ANT</string>
    <string name="NetworkInfo_3GSlceVoice">3GSpeechCodec</string>
    <string name="NetworkInfo_3GSecurityConfiguration">3GSecurityConfiguration</string>
    <string name="uart_usb_switch">UART/USB switch</string>
    <string name="sensor">Sensor</string>
    <string name="device_register">Device Register</string>
    <string name="aal_title">AAL</string>
    <string name="sensor_hub_test">Sensor Hub Test</string>
</resources>