<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_status" />
        <TextView android:id="@id/status_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_level" />
        <TextView android:id="@id/level_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_scale" />
        <TextView android:id="@id/scale_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_health" />
        <TextView android:id="@id/health_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_voltage" />
        <TextView android:id="@id/voltage_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_temperature" />
        <TextView android:id="@id/temperature_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_technology" />
        <TextView android:id="@id/tech_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_bootup_time" />
        <TextView android:id="@id/bootup_time_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log_record_interval" />
        <EditText android:id="@id/log_record_interval_et" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/log_record_interval_default" android:singleLine="true" android:inputType="number" />
        <TextView android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log_record_interval_unit" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_info_record" />
        <Button android:id="@id/log_record_btn" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/battery_info_record_start" />
    </LinearLayout>
    <View android:background="#ff909090" android:layout_width="wrap_content" android:layout_height="2.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_charging" />
        <Button android:id="@id/battery_charging_stop_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_stop" />
        <Button android:id="@id/battery_charging_restart_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_restart" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_current" />
        <Button android:id="@id/battery_current_rise_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_rise" />
        <Button android:id="@id/battery_current_reduce_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_reduce" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_temperature" />
        <EditText android:id="@id/battery_temperature_edit" android:layout_width="80.0dip" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="3" android:inputType="numberSigned" />
        <Button android:id="@id/battery_temperature_set_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_set" />
    </LinearLayout>
</LinearLayout>